# itam-planner

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .vercelignore  .yamllint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  cspell.jsonc  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  turbo.json
.cspell/: named-entities.txt  spanish.txt  technical.txt
.cursor/rules/: 00-bootstrap-and-authority.mdc  10-adr-traceability.mdc  20-scope-and-phase.mdc  30-stack-and-version-policy.mdc  40-architecture-and-boundaries.mdc  45-ingestion-and-public-data.mdc  50-state-privacy-and-public-data.mdc  60-deployment-and-runtime.mdc  70-quality-gates-and-automation.mdc  80-frontend-experience.mdc  90-legal-originality-and-bibliography.mdc
.githooks/: commit-msg  pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_correction.yml  feature_request.yml  source_drift.yml
.github/workflows/: catalog-refresh.yml  ci.yml  deploy-web.yml  update-changelog.yml
apps/api/: Dockerfile  README.md  package.json  pyproject.toml
apps/api/src/itam_planner_api/: __init__.py  app.py  cli.py  common.py  config.py  models.py
apps/api/src/itam_planner_api/exports/: json_exporter.py
apps/api/src/itam_planner_api/parsers/: boletines.py  calendars.py  pdf.py  regulations.py  schedules.py  services.py
apps/api/src/itam_planner_api/pipeline/: builder.py
apps/api/src/itam_planner_api/reference/: official_bulletin_codes.json
apps/api/src/itam_planner_api/storage/: repository.py
apps/api/tests/: conftest.py  test_api_app.py  test_bulletins.py  test_documents_and_schedules.py  test_pipeline_and_exports.py  test_source_parsers.py
apps/api/tests/fixtures/html/: boletines_index.html  horarios_act_11300.html  horarios_period_2938.html  menu_servicios_no_personalizados.html  servicios_calendarios.html  servicios_itam.html
codex.d/: 00-read-agents.md
scripts/: check-source-literals.mjs  check-source-literals.test.mjs  editor-workspace.test.mjs  generate-changelog.mjs  generate-changelog.test.mjs  merge-coverage.mjs  merge-coverage.test.mjs  run-api-typecheck.mjs  run-pnpm-with-node-version.mjs  sync-web-public-data-lib.mjs  sync-web-public-data.mjs  sync-web-public-data.test.mjs  verify-api-fixture-promotion.mjs  verify-published-catalog-diff.mjs  web-quality-contract.test.mjs
(+262 files in other folders)
