# Derived from ADR-0002 and ADR-0006.
# This repository uses uv as the only supported Python environment and package workflow.

[project]
name = "itam-planner-workspace"
version = "26.04.0"
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["apps", "packages", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
include = ["apps/api/src"]
exclude = [
  "**/__pycache__",
  ".venv",
  "venv",
  "dist",
  "build"
]
extraPaths = ["apps/api/src"]
venvPath = "apps/api"
venv = ".venv"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp"
pythonpath = ["apps/api/src"]
testpaths = ["apps/api/tests"]
